--- a/Amana_notebook.ipynb
+++ b/Amana_notebook.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/Amana28/Deep-Learning/blob/master/Amana_notebook.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
